<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Alarm_App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="test_string">Test Stringy</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="delete">DELETE</string>
    <string name="noalarm">NO ALARM SET</string>
    <string name="create">NEW ALARM</string>
    <string name="title_activity_alarm__ringing_">Alarm_App</string>
    <string name="ringing">Ring ! Ring!</string>
    <string name="stop">STOP</string>
</resources>
